--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
     <style type="text/css">
 	@media screen and (max-width: 600px) {
 
-		
+		table[class=responsive-tab] {
+    display: block;
+    width: 100% !important;
+  }
+   
+  table[class=responsive-image] {
+    height: auto;
+    max-width: 100% !important;
+  }
 	}
 </style>
 
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
-    <table bg-color="#343846" width="100%" border="0" cellpadding="0" cellspacing="0" >
+    <table bg-color="#343846" width="100%" border="0" cellpadding="0" cellspacing="0"  >
         <tbody>
             <tr>
                 <td>
@@ -27,14 +35,14 @@
                             <tr>
                                 <td align="center" style="text-align:center">
                                         <a rel="nofollow" target="_blank" href="http://www.cewe.be/nl/" title="" class="yiv1190034777">
-                                            <img src="http://www.smaindjebbari.fr/creation/cewe-newsletter/img/cewe.png" border="0" width="170" alt="">
+                                            <img class="responsive-image" src="http://www.smaindjebbari.fr/creation/cewe-newsletter/img/cewe.png" border="0" width="170" alt="">
                                         </a>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
 
-                    <table align="center" bgcolor="#bd121b" height="150" width="600">
+                    <table align="center" bgcolor="#bd121b" height="150" width="100%" style="max-width: 600px;">
                         <tbody>
                             <tr>
                                 <td height="13"></td>
@@ -68,7 +76,7 @@
                     </table>
 
 
-                    <table align="center"   width="600">
+                    <table  class="responsive-tab" align="center"   width="600">
                             <tbody>
                                 <tr>
                                     <td height="13"></td>
