--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                             </tr>
                         </tbody>
                     </table>
+                    <!-- Compatibilité Outlook -->
+                    <!--[if (gte mso 9)|(IE)]>
+            <table align="center" bgcolor="#bd121b" height="150" width="600">
+                        <tbody>
+                            
+            <![endif]-->
 
                     <table align="center" bgcolor="#bd121b" height="150" width="100%" style="max-width: 600px;">
                         <tbody>
@@ -74,7 +80,11 @@
                                 
                         </tbody>
                     </table>
-
+                    <!-- Compatibilité Outlook -->
+ 					<!--[if (gte mso 9)|(IE)]>
+            				</tbody>
+                    	</table>
+            		<![endif]-->
 
                     <table  class="responsive-tab" align="center"   width="600">
                             <tbody>
